# DeepGenGraph

./: .gitignore  run_e2e.py  run_kernel.py  研究.mlir
3rd/deepgengraph/: CMakeLists.txt  pyproject.toml  rebuild.sh
3rd/deepgengraph/ffi/: passes.cpp
3rd/deepgengraph/include/deepgengraph/Conversion/DeepgengraphToLinalgOnTensor/: CMakeLists.txt  Passes.h  Passes.td
3rd/deepgengraph/include/deepgengraph/Dialect/Deepgengraph/IR/: DeepgengraphInterfaces.td  DeepgengraphOps.td
3rd/deepgengraph/lib/Conversion/: CMakeLists.txt
3rd/deepgengraph/lib/Conversion/DeepgengraphToLinalgOnTensor/: CMakeLists.txt  DeepgengraphToLinalgOnTensorPass.cpp
3rd/deepgengraph/lib/Dialect/Deepgengraph/IR/: DeepgengraphOps.cpp
3rd/deepgengraph/lib/Dialect/Deepgengraph/Transforms/: EquivalentTransform.cpp  EraseTypeInKernel.cpp  Parallelize.cpp  RecoverTypeInKernel.cpp  ToMask.cpp
3rd/deepgengraph/python/deepgengraph/: utils.py
3rd/deepgengraph/python/deepgengraph/partition/: config.py
3rd/deepgengraph/python/deepgengraph/transform/: common.py
3rd/deepgengraph/test/: CMakeLists.txt  test_input.mlir  test_linalg.mlir  test_src.cpp
deepgengraph_exp/: utils.py
deepgengraph_exp/cases/kernels/: attn.py
deepgengraph_exp/cases/models/: attn.py  llama_base.py
